# Sakora

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build_upload.yaml
Backend/env/: codequeue.cpp  environment.cpp  environment.h  tool.cpp
Backend/object/: object.cpp  object.h
Backend/sakCalc/: calc.cpp  calc.h
Backend/sakVM/: sakvm.cpp  sakvm.h
Backend/scope/: identifier.cpp  identifier.h  scope.cpp  scope.h  value.cpp  value.h
Backend/type/: basic_type.cpp  basic_type.h  fn_type.cpp  fn_type.h  tuple_type.cpp  tuple_type.h  type.cpp  type.h
Backend/type/types/: sbool.cpp  sbool.h  sdecimal.cpp  sdecimal.h  sinteger.cpp  sinteger.h  sstr.cpp  sstr.h
Backend/visitor/: visitor.cpp  visitor.h
Fronted/lexer/: lex.cpp  token.cpp  token.h
Fronted/parser/: Grammar.txt  ast.cpp  ast.h  ast_design.cpp  ast_design.h  parser.cpp  parser.h
Frontend/lexer/: lex.cpp  lex.h  token.h
Frontend/parser/: ast_design.cpp  ast_design.h  parser.cpp  parser.h
Runner/: runner.cpp  runner.h
Test/: test.cpp  test.h  testcore.cpp  testcore.h
error/: error.cpp  error.h  lexer_error.cpp  lexer_error.h  parser_error.cpp  parser_error.h  storage_error.cpp  storage_error.h
sakConsole/: commands.cpp  commands.h  console.cpp  console.h
sakVM/: vm.cpp  vm.h
sakVM/core/: codequeue.h  environment.cpp  environment.h  tool.h
